# Ecommerce-Product-Assistant

./: .gitignore  Dockerfile  Notes.md  README.md  get_lib_versions.py  pyproject.toml  requirements.txt  scrapper_ui.py
.github/workflow/: infra.yml
architecture/: arch1.excalidraw
data/: product_reviews.csv
k8/: deployment.yaml
notebook/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scarapper.py
prod_assistant/evaluation/: ragas_eval.py
prod_assistant/mcp_server/: client.py  product_search_server.py
prod_assistant/retriever/: retrieval.py  retriever_advance.py
prod_assistant/router/: main.py
prod_assistant/utils/: config_loader.py  model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_rag_workflow_copy.py  agentic_workflow_with_mcp_websearch.py  agentic_workflow_with_mcp_websearch_old.py  generation_workflow.py  normal_RAG_workflow_RAGAS.py  vanilla_RAG_workflow.py
